# homelab_api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
src/: auth.rs  config.rs  error.rs  main.rs  state.rs
src/routes/: health.rs  mod.rs  services.rs  stacks.rs  stats.rs  webhook.rs
