[package]
name = "homelab_api"
version = "0.1.0"
edition = "2021"
description = "Rust API for the homelab — serves service data to the Swift app and controls Docker containers"
license = "MIT"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
bollard = "0.17"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
dotenvy = "0.15"

[profile.release]
strip = true
lto = true
codegen-units = 1
